<resources>
    <string name="app_name">InCovid</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client_id" translatable="false">691543680406-ad4ul7rq8chro3bqs4oqnb471l0dcta7.apps.googleusercontent.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_actvity_toll_free_no" translatable="false">ActvityTollFreeNo</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="are_you_having_covid_19_symptoms">Are you having Covid-19 symptoms</string>
    <string name="we_the_ventricles_are_a_group_of_4_who_came_up_with_the_idea_of_something_innovative_for_the_pandemic_using_our_known_resources_for_technical_prevention_of_the_same_this_app_is_created_and_developed_by_us_taking_into_consideration_the_casualties_caused_by_the_virus_so_we_dropped_our_technical_knowledge_in_this_project_this_app_can_only_manage_to_prevent_the_virus_and_we_dont_guarantee_for_any_casualties_caused_for_the_same_all_parts_of_the_app_are_licensed_to_the_ventricles_and_misuse_of_any_portion_of_this_app_may_be_subject_to_violation_of_its_rules">We the Ventricles are a group of 4 who came up with the idea of something innovative for the pandemic using our known resources for technical prevention of the same. This app is created and developed by us taking into consideration the casualties caused by the virus. So we dropped our technical knowledge in this project. This app can only manage to prevent the virus , and we dont guarantee for any casualties caused for the same. All parts of the app are licensed to the Ventricles and misuse of any portion of this app may be subject to violation of its rules.</string>
    <string name="from_ventricles">From Ventricles</string>
    <string name="covid_19_monitoring_app">Covid-19 Monitoring App</string>
    <string name="developer">DEVELOPER:</string>
    <string name="angshuman_barpujari">Angshuman Barpujari</string>
    <string name="team_leader">Team Leader:</string>
    <string name="saikat_kamal_halder">Saikat Kamal Halder</string>
    <string name="algorithm_fixer">Algorithm Fixer:</string>
    <string name="harshit_singhal">Harshit Singhal</string>
    <string name="logging_you_in">Logging You In</string>
    <string name="just_a_moment">Just A Moment</string>
    <string name="try_again">Try Again</string>
    <string name="log_out">Log Out</string>
    <string name="you_re_safe">You\'re safe.</string>
    <string name="travel">TRAVEL</string>
    <string name="slide_to_travel">Slide to Travel</string>
    <string name="nearby_red_zone">Nearby Red Zone</string>
    <string name="search_for_a_place">Search for a place</string>
    <string name="nearby">Nearby</string>
    <string name="searching_within_5km">Searching within 5KM</string>
    <string name="phone_number_copied">Phone number copied</string>
    <string name="submiting_wait">Submitting..Wait</string>
    <string name="submitted_and_being_reviewed">Submitted and being reviewed!</string>
    <string name="submission_failed">Submission Failed!</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_recent_visit">Enter recent visit</string>
    <string name="enter_symptoms">Enter symptoms</string>
    <string name="canceled_login">Canceled Login!</string>
    <string name="failed_to_login">Failed To Login!</string>
    <string name="welcome">Welcome, </string>
    <string name="installed_this_amazing_app_link_to_app">Install this amazing app link to app</string>
    <string name="refer_a_friend">Refer a friend?</string>
    <string name="youre_not_safe">You\'re not safe</string>
    <string name="partially_safe">Partially safe</string>
    <string name="youre_safe">You\'re safe</string>
    <string name="notification_service_stopped">Notification Service Stopped</string>
    <string name="youre_near_a_redzone">You\'re near a redzone</string>
    <string name="stay_away_from">Stay away from </string>
    <string name="km_away"> KM away</string>
    <string name="about_us">About us</string>
    <string name="toll_free_no">Toll-free Number</string>
    <string name="name">Name</string>
    <string name="recent_visit">Recent Visit</string>
    <string name="do_you_want_to_help_us_stop_covid_19">Do you want to help us stop COVID 19?</string>
    <string name="donate_to_covid_19_fund">Donate to COVID 19 fund</string>
    <string name="vocational_training">Vocational Training</string>
    <string name="redzone">Redzone</string>
    <string name="active_case">Active Case</string>
    <string name="death">Death</string>
    <string name="more">MORE</string>
    <string name="covid_19_affects_">COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.</string>
    <string name="no_places_to_show">No places to show</string>
    <string name="area_in">Area in:</string>
    <string name="redzones">Redzones</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_no">Enter your phone no</string>
    <string name="i_m_a_migrant_labour">I\'m a migrant labour</string>
    <string name="i_know_someone_who_is_a_migrant_labour">I know someone who is a migrant labour</string>
    <string name="submit">Submit</string>
</resources>