<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout" android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBarPdfViewer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="2dp"
        app:title="@string/about_us"
        app:titleTextColor="#000"
        android:minHeight="?attr/actionBarSize"/>
    <RelativeLayout
        android:padding="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/ImgAbout"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/HeaderName"
            android:textSize="22dp"

            android:layout_toRightOf="@id/ImgAbout"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/HeaderLowText"
            android:layout_below="@id/HeaderName"
            android:textSize="18dp"
            android:layout_toRightOf="@id/ImgAbout"
            android:text="@string/covid_19_monitoring_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_below="@id/HeaderLowText"
            android:textSize="14dp"
            android:layout_toRightOf="@id/ImgAbout"
            android:text="@string/from_ventricles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/AppDesc"
            android:layout_below="@id/ImgAbout"
            android:text="@string/we_the_ventricles_are_a_group_of_4_who_came_up_with_the_idea_of_something_innovative_for_the_pandemic_using_our_known_resources_for_technical_prevention_of_the_same_this_app_is_created_and_developed_by_us_taking_into_consideration_the_casualties_caused_by_the_virus_so_we_dropped_our_technical_knowledge_in_this_project_this_app_can_only_manage_to_prevent_the_virus_and_we_dont_guarantee_for_any_casualties_caused_for_the_same_all_parts_of_the_app_are_licensed_to_the_ventricles_and_misuse_of_any_portion_of_this_app_may_be_subject_to_violation_of_its_rules"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        />

    <RelativeLayout
        android:paddingLeft="26dp"
        android:paddingTop="16dp"
        android:paddingRight="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/DeveloperName"
            android:text="@string/developer"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textStyle="bold"/>
        <TextView
            android:layout_toRightOf="@id/DeveloperName"
            android:text="@string/angshuman_barpujari"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/LeaderName"
            android:text="@string/team_leader"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_below="@id/DeveloperName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textStyle="bold"/>
        <TextView
            android:layout_below="@id/DeveloperName"
            android:layout_toRightOf="@id/LeaderName"
            android:text="@string/saikat_kamal_halder"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/FixerName"
            android:text="@string/algorithm_fixer"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_below="@id/LeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:layout_below="@id/LeaderName"
            android:layout_toRightOf="@id/FixerName"
            android:text="@string/harshit_singhal"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtBtnstopcovid"
            android:textColor="@color/visit_website_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/FixerName"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="40dp"
            android:autoLink="email"
            android:text="@string/do_you_want_to_help_us_stop_covid_19"/>



    </RelativeLayout>

</LinearLayout>