<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item

            android:id="@+id/nav_refer"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/refer_a_friend"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_anull"
            android:title=""
            android:enabled="false"/>



    </group>


</menu>
